[package]
name = "tojam2021"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26"
rscsg = { git = "https://github.com/tannerrogalsky/rscsg", branch = "fixes" }
#solstice-2d = "0.2"
solstice-2d = { path = "../solstice/solstice-2d" }
eyre = "0.6"
rapier3d = "0.8"