[package]
name = "tojam2021"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#rscsg = { git = "https://github.com/tannerrogalsky/rscsg", branch = "fixes" }
rscsg = { path = "../rscsg" }
solstice-2d = "0.2"
#solstice-2d = { path = "../solstice/solstice-2d" }
eyre = "0.6"
rapier3d = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.24", default-features = false, features = ["web-sys"] }
wasm-bindgen = "0.2"
web-sys = "0.3"